--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -59,6 +59,12 @@
           <security mode="None"/>
         </binding>
       </basicHttpBinding>
+      <customBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureCustomBinding">
+          <security authenticationMode="UserNameForCertificate" requireSecurityContextCancellation="false" requireSignatureConfirmation="false" messageProtectionOrder="SignBeforeEncryptAndEncryptSignature" requireDerivedKeys="true"/>
+          <httpTransport/>
+        </binding>
+      </customBinding>
       <wsHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
@@ -69,9 +75,17 @@
       <ws2007FederationHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
-            <message negotiateServiceCredential="false" issuedKeyType="AsymmetricKey" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding"/>
-              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex"/>
+            <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding">
+                <identity>
+                  <dns value="OSDevGrp.OSIntranet.Services"/>
+                </identity>
+              </issuer>
+              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex">
+                <identity>
+                  <dns value="OSDevGrp.OSIntranet.Services"/>
+                </identity>
+              </issuerMetadata>
             </message>
           </security>
         </binding>
@@ -155,9 +169,9 @@
         </endpoint>
       </service>
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
-        <endpoint address="" binding="wsHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
-        <endpoint address="mex" binding="wsHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
+        <endpoint address="" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+        <endpoint address="mex" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <client>
@@ -208,12 +222,13 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
           <serviceCredentials>
-            <!-- Set allowUntrustedRsaIssuers to true to allow self-signed, asymmetric key based SAML tokens -->
+            <!-- Set allowUntrustedRsaIssuers to true to allow self-signed, asymmetric key based SAML tokens
             <issuedTokenAuthentication allowUntrustedRsaIssuers="true">
               <knownCertificates>
                 <add findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
               </knownCertificates>
             </issuedTokenAuthentication>
+             -->
             <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
@@ -225,6 +240,12 @@
         <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
+          <serviceCredentials>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <clientCertificate>
+              <authentication certificateValidationMode="PeerTrust"/>
+            </clientCertificate>
+          </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
@@ -233,6 +254,7 @@
           <clientCredentials>
             <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <serviceCertificate>
+              <defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
               <authentication certificateValidationMode="PeerTrust"/>
             </serviceCertificate>
           </clientCredentials>
