--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -59,12 +59,6 @@
           <security mode="None"/>
         </binding>
       </basicHttpBinding>
-      <customBinding>
-        <binding name="OSDevGrp.OSIntranet.SecureCustomBinding">
-          <security authenticationMode="UserNameForCertificate" requireSecurityContextCancellation="false" requireSignatureConfirmation="false" messageProtectionOrder="SignBeforeEncryptAndEncryptSignature" requireDerivedKeys="true"/>
-          <httpTransport/>
-        </binding>
-      </customBinding>
       <wsHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
@@ -76,7 +70,7 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
                 <identity>
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
@@ -169,9 +163,9 @@
         </endpoint>
       </service>
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-        <endpoint address="" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
-        <endpoint address="" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
-        <endpoint address="mex" binding="customBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureCustomBinding" contract="IMetadataExchange"/>
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+        <endpoint address="mex"  binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <client>
