--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+    <section name="microsoft.identityModel" type="Microsoft.IdentityModel.Configuration.MicrosoftIdentityModelSection, Microsoft.IdentityModel"/>
     <section name="basicSecurityTokenServiceConfiguration" type="OSDevGrp.OSIntranet.Security.Configuration.ConfigurationProvider, OSDevGrp.OSIntranet.Security"/>
   </configSections>
   <iocConfiguration>
@@ -13,6 +14,23 @@
       <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
+  <microsoft.identityModel>
+    <service>
+      
+      <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
+        <trustedIssuers>
+          <clear/>
+          <add thumbprint="fee449ee0e3965a5246f000e87fde2a065fd89d4" name="CN=Root Agency"/>
+        </trustedIssuers>
+      </issuerNameRegistry>
+      <serviceCertificate>
+        <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+      </serviceCertificate>
+      <!--
+      <certificateValidation certificateValidationMode="PeerTrust" revocationMode="Online" trustedStoreLocation="LocalMachine"/>
+      -->
+    </service>
+  </microsoft.identityModel>
   <basicSecurityTokenServiceConfiguration>
     <issuerTokenName address="http://localhost:8010/sts"/>
     <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Services"/>
@@ -169,10 +187,12 @@
           </identity>
         </endpoint>
       </service>
-      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract">
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+        <!--
         <endpoint address="mex"  binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange"/>
+        -->
       </service>
     </services>
     <client>
@@ -225,6 +245,7 @@
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
+        <!--
         <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
@@ -236,6 +257,7 @@
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
+          -->
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
