--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -16,24 +16,20 @@
   </iocConfiguration>
   <microsoft.identityModel>
     <service>
-      
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
-          <add thumbprint="fee449ee0e3965a5246f000e87fde2a065fd89d4" name="CN=Root Agency"/>
-        </trustedIssuers>
-      </issuerNameRegistry>
+          <add thumbprint="3e07c011e0d76365af1391a3be7cda82eaf81d5a" name="CN=OSDevGrp.OSIntranet"/>
+        </trustedIssuers></issuerNameRegistry>
       <serviceCertificate>
         <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
       </serviceCertificate>
-      <!--
-      <certificateValidation certificateValidationMode="PeerTrust" revocationMode="Online" trustedStoreLocation="LocalMachine"/>
-      -->
+      <certificateValidation certificateValidationMode="ChainTrust"/>
     </service>
   </microsoft.identityModel>
   <basicSecurityTokenServiceConfiguration>
     <issuerTokenName address="http://localhost:8010/sts"/>
-    <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Services"/>
+    <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Tokens"/>
     <trustedRelyingPartyCollection>
       <clear/>
       <add address="http://localhost"/>
@@ -96,7 +92,7 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc">
                 <identity>
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
@@ -190,9 +186,6 @@
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract">
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
-        <!--
-        <endpoint address="mex"  binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange"/>
-        -->
       </service>
     </services>
     <client>
@@ -230,13 +223,6 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <!-- Set allowUntrustedRsaIssuers to true to allow self-signed, asymmetric key based SAML tokens
-            <issuedTokenAuthentication allowUntrustedRsaIssuers="true">
-              <knownCertificates>
-                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-              </knownCertificates>
-            </issuedTokenAuthentication>
-             -->
             <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
@@ -245,19 +231,6 @@
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
-        <!--
-        <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-          <serviceMetadata httpGetEnabled="True"/>
-          <serviceDebug includeExceptionDetailInFaults="False"/>
-          <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
-            <clientCertificate>
-              <authentication certificateValidationMode="PeerTrust"/>
-            </clientCertificate>
-          </serviceCredentials>
-          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
-        </behavior>
-          -->
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
@@ -280,16 +253,27 @@
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
     </sharedListeners>
     <sources>
-      <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
-      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="System.IdentityModel">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="Microsoft.IdentityModel">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
     </sources>
+    <trace autoflush="true"/>
   </system.diagnostics>
 </configuration>
