--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -21,21 +21,19 @@
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
-          <add thumbprint="fee449ee0e3965a5246f000e87fde2a065fd89d4" name="CN=Root Agency"/>
+          <add thumbprint="3e07c011e0d76365af1391a3be7cda82eaf81d5a" name="CN=OSDevGrp.OSIntranet"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <serviceCertificate>
         <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
       </serviceCertificate>
-      <!--
-      <certificateValidation certificateValidationMode="PeerTrust" revocationMode="Online" trustedStoreLocation="LocalMachine"/>
-      -->
+      <certificateValidation certificateValidationMode="ChainTrust"/>
     </service>
   </microsoft.identityModel>
 
   <basicSecurityTokenServiceConfiguration>
     <issuerTokenName address="http://localhost:8010/sts"/>
-    <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Services"/>
+    <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Tokens"/>
     <trustedRelyingPartyCollection>
       <clear/>
       <add address="http://localhost"/>
@@ -88,7 +86,7 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc">
                 <identity>
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
@@ -98,18 +96,6 @@
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
               </issuerMetadata>
-              <tokenRequestParameters>
-                <trust:SecondaryParameters xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">
-                  <trust:TokenType xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1</trust:TokenType>
-                  <trust:KeyType xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://docs.oasis-open.org/ws-sx/ws-trust/200512/SymmetricKey</trust:KeyType>
-                  <trust:KeySize xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">256</trust:KeySize>
-                  <trust:KeyWrapAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p</trust:KeyWrapAlgorithm>
-                  <trust:EncryptWith xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#aes256-cbc</trust:EncryptWith>
-                  <trust:SignWith xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2000/09/xmldsig#hmac-sha1</trust:SignWith>
-                  <trust:CanonicalizationAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/10/xml-exc-c14n#</trust:CanonicalizationAlgorithm>
-                  <trust:EncryptionAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#aes256-cbc</trust:EncryptionAlgorithm>
-                </trust:SecondaryParameters>
-              </tokenRequestParameters>
             </message>
           </security>
         </binding>
@@ -192,10 +178,9 @@
           </identity>
         </endpoint>
       </service>
-      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract">
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
         <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
-        <endpoint address="mex"  binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <client>
@@ -246,13 +231,6 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
           <serviceCredentials>
-            <!-- Set allowUntrustedRsaIssuers to true to allow self-signed, asymmetric key based SAML tokens
-            <issuedTokenAuthentication allowUntrustedRsaIssuers="true">
-              <knownCertificates>
-                <add findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
-              </knownCertificates>
-            </issuedTokenAuthentication>
-             -->
             <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
@@ -260,17 +238,6 @@
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
-        </behavior>
-        <behavior name="OSDevGrp.OSIntranet.SecurityTokenServiceBehavior">
-          <serviceMetadata httpGetEnabled="True"/>
-          <serviceDebug includeExceptionDetailInFaults="True"/>
-          <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
-            <clientCertificate>
-              <authentication certificateValidationMode="PeerTrust"/>
-            </clientCertificate>
-          </serviceCredentials>
-          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
@@ -308,16 +275,27 @@
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.Tests.svclog"/>
     </sharedListeners>
     <sources>
-      <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
-      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="System.IdentityModel">
+        <listeners>
+          <add name="sharedListener"/>
+        </listeners>
+      </source>
+      <source name="Microsoft.IdentityModel">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
     </sources>
+    <trace autoflush="true"/>
   </system.diagnostics>
 </configuration>
